# ChangeLog for app-crypt/etcd-ca
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/etcd-ca/ChangeLog,v 1.1 2014/10/16 23:58:42 zmedico Exp $

*etcd-ca-0_p20140903 (16 Oct 2014)

  16 Oct 2014; Zac Medico <zmedico@gentoo.org> +etcd-ca-0_p20140903.ebuild,
  +metadata.xml:
  Add app-crypt/etcd-ca.